--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 DB_USERNAME=windwebdev
 DB_PASSWORD=phong1994
-ACCESS_TOKEN_SECRET= dfgdfgdfg(không quang trọng để gì)
+ACCESS_TOKEN_SECRET= chào bạn - dfgdfgdfg(không quang trọng để gì)
